simplified the name of this repo to "octoml@mlops"

--- a/docs/mlperf.automation/datasets/coco2017.md
+++ b/docs/mlperf.automation/datasets/coco2017.md
@@ -1,4 +1,4 @@
-﻿## Install COCO 2017 val dataset (5000 images)
+## Install COCO 2017 val dataset (5000 images)
 
 <pre>
 <b>fursin@ck:~$</b> ck install package --ask --tags=dataset,coco,val,2017,full
