added CK dashboards demo

--- a/docs/mlperf.automation/datasets/coco2017.md
+++ b/docs/mlperf.automation/datasets/coco2017.md
@@ -24,6 +24,10 @@ Note that opencv provides faster conversion and can give better accuracy than pi
 ## Convert COCO to 1200x1200
 
 ```
-ck install package --tags=dataset,object-detection,preprocessed,full,side.300,using-pillow
+ck install package --tags=dataset,object-detection,preprocessed,full,side.1200
+```
+
+You can add flag --ask to select the path where to install this dataset to be able to reuse it later:
+```
 ck install package --tags=dataset,object-detection,preprocessed,full,side.1200 --ask
 ```
